# tl2-loot-filter

./: .gitignore  CMakeLists.txt  README.md  README.zh-CN.md  d3d9.def  extract_item_unittypes.py  hook_b.cpp  hooks.cpp  lang.h  loot_filter.cpp  loot_filter.h  overlay.cpp  tl2_loot_filter.sln  tl2_loot_filter.vcxproj  tl2_loot_filter.vcxproj.filters
.github/workflows/: release.yml
